--- a/NLP_POS_HMM.ipynb
+++ b/NLP_POS_HMM.ipynb
@@ -263,7 +263,7 @@
    "source": [
     "### Testing\n",
     "After getting the best accuracy, we will take the lambda as a parameter for testing.\n",
-    "In this Testing we use 0.99 as the lambda and got 91.80% for the accuracy"
+    "In this Testing we use 0.99 as the lambda and got 91.68% for the accuracy"
    ]
   },
   {
@@ -348,7 +348,7 @@
    "source": [
     "### Testing\n",
     "After getting the best accuracy, we will take the lambda as a parameter for testing.\n",
-    "In this Testing we use 0.917477 as the lambda and got 91.82% for the accuracy"
+    "In this Testing we use 0.99743693209634 as the lambda and got 91.69% for the accuracy"
    ]
   },
   {
